--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <img src="./ai-logo.png" alt="logo" id="logo">
-    <h1>I'm <span id="name">cyberia</span>, Your <span id="va">Virtual Assistant</span></h1> <!-- Minor formatting of the text -->
+    <h1>I'm <span id="name">CYjet </span>, Your <span id="va">Virtual Assistant</span></h1> <!-- Minor formatting of the text -->
 
     <img src="voice.gif" alt="voice" id="voice">
     <button id="btn"><img src="./mic.svg" alt="mic"><span id="content">Click to talk to me</span></button> <!-- Fixed 'talt' to 'talk' -->
